# cangjie

./: .gitignore  Makefile.inc  cangjie5.sh  debug.h  key.c  key.sh  noto_cjk_variant_order_toggle.sh  readme.md  rime_cangjie_dict.sh  serialize.c  serialize.h
app.aux/: Makefile  fb.c  kre.sh  main.c  rsvg.h
app.c5/: Makefile  check.sh  dict.c  key.c  l2r.h  lookup.c  serialize.c
app.c5.lookup/: Makefile  lookup.c
app.c5.mkdict/: mkdict.c
app.c5.srv/: 03-tutorial.html  httpd.sh  index.html  index.html.bak
app.c5.srv/cgi-bin/: 00-env.sh  01-lookup.c  02-sample.c  03-tutorial.c  Makefile
app.cj5.http/: 99_http.nft  Makefile  chroot.sh  httpd.sh  meson.build  wt88047.srv.cj5.sh
app.cj5.http/src/: Makefile  chroot.sh  main.c  meson.build  obsolete.c
app.cj5.lookup/: l2r.c
app.cj5.mkdict/: Makefile
auxiliary_shapes/: Makefile  cairo.c  cairo.h  dict.ref.c  dict.sh  fb.c  fb.h  main.c  rsvg.c  rsvg.h  termios.c
src/: Makefile  chroot.sh  meson.build
src/bin.aux/: .gitignore  color.h  kre.h  rsvg.c  termios.h
src/bin.http/: cj5.css  httpd.sh  main.c  meson.build  wt88047.srv.cj5.sh
src/bin.lookup/: keyquiz.c
src/bin.mkdict/: .gitignore  cc.sh  meson.build  mkdict.c
